Fix problem with not showing stars after create new review  && add better style to user review image

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1296,6 +1296,7 @@ h3 {
     width: 50%;
     font-size: 18px;
     p {
+      width: 100%;
       padding-top: 13px;
       margin-bottom: 0px;
       font-size: 14px;
@@ -1308,7 +1309,9 @@ h3 {
     width: 52px;
     height: 52px;
     margin: 10px;
+    margin-top: 1px;
     p {
+      margin-left: -10px !important;
       font-size: 14px;
       color: $body-bg-light;
     }
